--- a/HTML_Folder/Pages/blogs.html
+++ b/HTML_Folder/Pages/blogs.html
@@ -14,31 +14,34 @@
     <script src="/JAVASCRIPT/import_templates.js"></script>
 
     <!--PAGE TITLE-->
-    <title>|| HOME ||</title>
+    <title>|| BLOGS ||</title>
   </head>
 
   <body>
     <main class="grid-body">
       <!--CONTENT BODY-->
       <section class="content-body">
-        <article>
-          <h1>
-            Hi! <br />
-            I am Ricardo Costa-Tré
-          </h1>
-          <p>
-            I am an aspiring game design student currently studying at the
-            University of the Witwatersrand.
-          </p>
-        </article>
+        <section id="blog-container"></section>
       </section>
 
       <!--NAV BAR-->
-      <aside id="nav-bar" style="padding: 0"></aside>
+      <aside id="nav-bar"></aside>
     </main>
   </body>
 
   <script>
+    // Import Nav Bar
     ImportNavBar();
+
+    // Import Blogs
+    let blogs = [
+      "/HTML_Folder/Blogs/blog1.html",
+      "/HTML_Folder/Blogs/blog2.html",
+      "/HTML_Folder/Blogs/blog3.html",
+      "/HTML_Folder/Blogs/blog4.html",
+      "/HTML_Folder/Blogs/blog5.html",
+      "/HTML_Folder/Blogs/blog6.html",
+    ];
+    ImportBlogs(blogs);
   </script>
 </html>
