--- a/HTML_Folder/Pages/blogs.html
+++ b/HTML_Folder/Pages/blogs.html
@@ -42,6 +42,10 @@
       "/HTML_Folder/Blogs/blog5.html",
       "/HTML_Folder/Blogs/blog6.html",
     ];
-    ImportBlogs(blogs);
+
+    for (let i = 0; i < blogs.length; i++) {
+      ImportBlog(blogs[i]);
+    }
   </script>
+  <script src="/JAVASCRIPT/collapse.js"></script>
 </html>
